# ai-readable-pdf-capture

./: CODEX.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.md  kindle.md  oss-research.md  setup.md
examples/: capture.yaml
src/ai_readable_pdf_capture/: __init__.py  capture.py  cli.py  config.py  demo.py  gui.py  models.py  pdf_builder.py
tests/: test_capture.py  test_demo.py  test_models.py  test_pdf_builder.py
