[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-readable-pdf-capture"
version = "0.1.0"
description = "Compliant screen/page capture to AI-readable searchable PDF with OCR text layer."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AI Readable PDF Capture Contributors"}]
keywords = ["pdf", "ocr", "screenshot", "ai", "tesseract", "pyautogui"]
dependencies = [
  "pillow>=10.0.0",
  "pyautogui>=0.9.54",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "reportlab>=4.0.0",
  "pytesseract>=0.3.10",
  "qrcode[pil]>=7.4.2",
  "pypdf>=4.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
ai-pdf-capture = "ai_readable_pdf_capture.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
